Fix: banner height on mobile

--- a/src/sass/components/_navigation.scss
+++ b/src/sass/components/_navigation.scss
@@ -46,7 +46,7 @@
             padding: 2.5px 8px;
             font-family: var(--ff-sans);
             font-size: var(--fs-400);
-            width: 60%; // Make both buttons full width
+            width: 75%; // Make both buttons full width
             text-align: center;
 
             &.outline {
